--- a/KAC Freak PDW/gamedata/configs/items/weapons/w_kac_isg.ltx
+++ b/KAC Freak PDW/gamedata/configs/items/weapons/w_kac_isg.ltx
@@ -8,7 +8,7 @@ cform                   = skeleton
 class                   = WP_AK74
 description             = st_wpn_m4_pdw_descr
 
-scopes 			        = acog, eot, ac10632, specter ,c-more, leupold, aimpoint, 0kp2, mepro, ekp8_18, deltapoint, d0cter, e0t2, pn23, compm4s, marchf, kemper, point_aimpro, sup, hamr, ps320, trihawk, monstrum, gee36
+scopes 			        = acog, eot, ac10632, specter ,c-more, leupold, aimpoint, 0kp2, mepro, ekp8_18, deltapoint, d0cter, e0t2, pn23, compm4s, marchf, kemper, point_aimpro, sup, hamr, ps320, trihawk, monstrum, gee36, t12
 parent_section  	    = wpn_m4_pdw
 
 ef_main_weapon_type     = 2
@@ -22,7 +22,7 @@ kind                          = w_rifle
 ;-------------------------------------------------------------------------------
 cost                 	= 45000
 weapon_class            = assault_rifle
-inv_weight              = 2.835
+inv_weight              = 2.8
 
 upgrades                	= up_gr_firstab_g36, up_gr_seconab_g36, up_gr_thirdab_g36, up_gr_fourtab_g36, up_gr_fourtcd_g36, up_gr_fourtef_g36
 installed_upgrades      	=
@@ -287,10 +287,9 @@ gl_hud_offset_rot 			= 0,0,0
 1icon_layer_x			= 85
 1icon_layer_y			= -6
 
-inv_weight                                         = 3.075
+inv_weight                                         = 3.1
 
 hud				= wpn_m4_pdw_ac10632_hud
-
 
 [wpn_m4_pdw_ac10632_hud]:wpn_m4_pdw_hud
 
@@ -307,10 +306,9 @@ item_visual                	= dynamics\weapons\wpn_kac_pdw\wpn_kac_ac10632_hud.o
 1icon_layer_x			= 87
 1icon_layer_y			= -4
 
-inv_weight                                         = 3.075
+inv_weight                                         = 3.2
 
 hud				= wpn_m4_pdw_eot_hud
-
 
 [wpn_m4_pdw_eot_hud]:wpn_m4_pdw_hud
 
@@ -329,8 +327,7 @@ hud						= wpn_m4_pdw_c-more_hud
 1icon_layer_x			= 86
 1icon_layer_y			= -3
 
-inv_weight                                         = 3.250
-
+inv_weight                                         = 3.1
 
 [wpn_m4_pdw_c-more_hud]:wpn_m4_pdw_hud
 
@@ -342,20 +339,14 @@ item_visual				= dynamics\weapons\wpn_kac_pdw\wpn_kac_c-more_hud.ogf
         aim_hud_offset_rot_16x9          = -0.005031, -0.006068, -0.015
 ;--------------------------------------------------------------------------------
 [wpn_m4_pdw_0kp2]:wpn_m4_pdw
-$spawn					= "weapons\ru556_0kp2"
-
-visual					= dynamics\weapons\wpn_kac_pdw\wpn_kac_world.ogf
 
 hud						= wpn_m4_pdw_0kp2_hud
 
-inv_weight                                         = 3.150
+inv_weight                                         = 3.2
 
 1icon_layer			    = 0kp2
 1icon_layer_x			= 84
 1icon_layer_y			= -0
-
-
-
 
 [wpn_m4_pdw_0kp2_hud]:wpn_m4_pdw_hud
 
@@ -367,20 +358,14 @@ item_visual				= dynamics\weapons\wpn_kac_pdw\wpn_kac_0kp2_hud.ogf
         aim_hud_offset_rot_16x9          = -0.018193, 0.003188, -0.015
 ;-------------------------------------------------------------------------------------------------------------------------------
 [wpn_m4_pdw_mepro]:wpn_m4_pdw
-$spawn					= "weapons\ru556_mepro"
-
-visual					= dynamics\weapons\wpn_kac_pdw\wpn_kac_world.ogf
 
 hud						= wpn_m4_pdw_mepro_hud
 
-inv_weight                                         = 3.322
+inv_weight                                         = 3.3
 
 1icon_layer			    = mepro
 1icon_layer_x			= 90
 1icon_layer_y			= 0
-
-
-
 
 [wpn_m4_pdw_mepro_hud]:wpn_m4_pdw_hud
 
@@ -392,20 +377,14 @@ item_visual				= dynamics\weapons\wpn_kac_pdw\wpn_kac_mepro_hud.ogf
         aim_hud_offset_rot_16x9          = 0.031323, -0.008612, -0.015
 ;-------------------------------------------------------------------------------------------------------------------------------
 [wpn_m4_pdw_aimpoint]:wpn_m4_pdw
-$spawn					= "weapons\ru556_aimpoint"
-
-visual					= dynamics\weapons\wpn_kac_pdw\wpn_kac_world.ogf
 
 hud						= wpn_m4_pdw_aimpoint_hud
 
-inv_weight                                         = 3.080
+inv_weight                                         = 3.1
 
 1icon_layer			    = aimpoint
 1icon_layer_x			= 85
 1icon_layer_y			= -9
-
-
-
 
 [wpn_m4_pdw_aimpoint_hud]:wpn_m4_pdw_hud
 
@@ -418,18 +397,13 @@ item_visual				= dynamics\weapons\wpn_kac_pdw\wpn_kac_aimpoint_hud.ogf
 ;-------------------------------------------------------------------------------------------------------------------------------
 [wpn_m4_pdw_point_aimpro]:wpn_m4_pdw
 
-visual					= dynamics\weapons\wpn_kac_pdw\wpn_kac_world.ogf
-
 hud						= wpn_m4_pdw_point_aimpro_hud
 
-inv_weight                                         = 3.280
+inv_weight                                         = 3.3
 
 1icon_layer			    = point_aimpro
 1icon_layer_x			= 87
 1icon_layer_y			= -9
-
-
-
 
 [wpn_m4_pdw_point_aimpro_hud]:wpn_m4_pdw_hud
 
@@ -441,20 +415,14 @@ item_visual				= dynamics\weapons\wpn_kac_pdw\wpn_kac_aimpoint_pro_hud.ogf
         aim_hud_offset_rot_16x9          = 0.010662, 0.003738, -0.015
 ;-------------------------------------------------------------------------------------------------------------------------------
 [wpn_m4_pdw_ekp8_18]:wpn_m4_pdw
-$spawn					= "weapons\ru556_ekp8_18"
-
-visual					= dynamics\weapons\wpn_kac_pdw\wpn_kac_world.ogf
 
 hud						= wpn_m4_pdw_ekp8_18_hud
 
-inv_weight                                         = 3.222
+inv_weight                                         = 3.1
 
 1icon_layer			    = ekp8_18
 1icon_layer_x			= 80
 1icon_layer_y			= 2
-
-
-
 
 [wpn_m4_pdw_ekp8_18_hud]:wpn_m4_pdw_hud
 
@@ -466,20 +434,14 @@ item_visual				= dynamics\weapons\wpn_kac_pdw\wpn_kac_ekp8_18_hud.ogf
         aim_hud_offset_rot_16x9          = 0.00995, -0.00522, -0.015
 ;-------------------------------------------------------------------------------------------------------------------------------
 [wpn_m4_pdw_e0t2]:wpn_m4_pdw
-$spawn					= "weapons\ru556_e0t2"
-
-visual					= dynamics\weapons\wpn_kac_pdw\wpn_kac_world.ogf
 
 hud						= wpn_m4_pdw_e0t2_hud
 
-inv_weight                                         = 3.177
+inv_weight                                         = 3.2
 
 1icon_layer			    = e0t2
 1icon_layer_x			= 80
 1icon_layer_y			= -8
-
-
-
 
 [wpn_m4_pdw_e0t2_hud]:wpn_m4_pdw_hud
 
@@ -492,17 +454,13 @@ item_visual				= dynamics\weapons\wpn_kac_pdw\wpn_kac_e0t2_hud.ogf
 ;-------------------------------------------------------------------------------------------------------------------------------
 [wpn_m4_pdw_d0cter]:wpn_m4_pdw
 
-inv_weight			= 2.980
+inv_weight			= 2.9
 
 hud				= wpn_m4_pdw_d0cter_hud
 
 1icon_layer			    = d0cter
 1icon_layer_x			= 89
 1icon_layer_y			= -4
-
-visual				= dynamics\weapons\wpn_kac_pdw\wpn_kac_world.ogf
-
-
 
 [wpn_m4_pdw_d0cter_hud]:wpn_m4_pdw_hud
 
@@ -515,17 +473,13 @@ item_visual                	= dynamics\weapons\wpn_kac_pdw\wpn_kac_docter_hud.og
 ;----------------------------------------------------------------------------------------
 [wpn_m4_pdw_deltapoint]:wpn_m4_pdw
 
-inv_weight			= 2.990
+inv_weight			= 2.9
 
 hud				= wpn_m4_pdw_deltapoint_hud
 
 1icon_layer			    = deltapoint
 1icon_layer_x			= 79
 1icon_layer_y			= -3
-
-visual				= dynamics\weapons\wpn_kac_pdw\wpn_kac_world.ogf
-
-
 
 [wpn_m4_pdw_deltapoint_hud]:wpn_m4_pdw_hud
 
@@ -539,13 +493,12 @@ item_visual                	= dynamics\weapons\wpn_kac_pdw\wpn_kac_deltapoint_hu
 [wpn_m4_pdw_compm4s]:wpn_m4_pdw
 
 hud					= wpn_m4_pdw_compm4s_hud
-visual					= dynamics\weapons\wpn_kac_pdw\wpn_kac_world.ogf
 
 1icon_layer                              = compm4s
 1icon_layer_x                            = 85
 1icon_layer_y                            = -9
 
-inv_weight                               = 2.615
+inv_weight                               = 3.10
 
 [wpn_m4_pdw_compm4s_hud]:wpn_m4_pdw_hud
 item_visual                		= dynamics\weapons\wpn_kac_pdw\wpn_kac_compm4s_hud.ogf
@@ -557,7 +510,7 @@ item_visual                		= dynamics\weapons\wpn_kac_pdw\wpn_kac_compm4s_hud.
 ;--------------------------------------------------------------------------------------------
 [wpn_m4_pdw_kemper]:wpn_m4_pdw
 
-inv_weight			    = 2.501
+inv_weight			    = 3.15
 
 hud				= wpn_m4_pdw_kemper_hud
 
@@ -565,7 +518,6 @@ hud				= wpn_m4_pdw_kemper_hud
 1icon_layer_x			= 78
 1icon_layer_y			= -10
 
-visual				= dynamics\weapons\wpn_kac_pdw\wpn_kac_world.ogf
 
 
 [wpn_m4_pdw_kemper_hud]:wpn_m4_pdw_hud
@@ -577,11 +529,13 @@ item_visual                	= dynamics\weapons\wpn_kac_pdw\wpn_kac_kemper_hud.og
         aim_hud_offset_rot               = 0.012364, -0.009318, -0.015
         aim_hud_offset_rot_16x9          = 0.012364, -0.009318, -0.015
 	
+;------------------------------------------------------------------------------
+;--------------------------------------SCOPES----------------------------------
+;------------------------------------------------------------------------------
 
-;-------------------------------------------------------------------------------SCOPES
 [wpn_m4_pdw_acog]:wpn_m4_pdw
 
-inv_weight			= 3.3
+inv_weight			= 3.4
 
 hud				= wpn_m4_pdw_acog_hud
 
@@ -591,38 +545,30 @@ hud				= wpn_m4_pdw_acog_hud
 
 
 scope_status                                       = 1
-scope_texture                                      = 
         scope_zoom_factor                = 42.86
 zoom_rotate_time		                           = 0.25
 scope_dynamic_zoom		                           = off
 
-
-visual = dynamics\weapons\wpn_kac_pdw\wpn_kac_world.ogf
-
-
-
-
 [wpn_m4_pdw_acog_hud]:wpn_m4_pdw_hud
 
 item_visual            	 	= dynamics\weapons\wpn_kac_pdw\wpn_kac_acog_hud.ogf
-        aim_hud_offset_pos               = -0.071617, 0.014613, -0.123695
-        aim_hud_offset_pos_16x9          = -0.071617, 0.014613, -0.123695
-        aim_hud_offset_rot               = 0.012422, 0.002247, -0.015
-        aim_hud_offset_rot_16x9          = 0.012422, 0.002247, -0.015
+        aim_hud_offset_pos               = -0.071656, 0.014415, -0.118796
+        aim_hud_offset_pos_16x9          = -0.071656, 0.014415, -0.118796
+        aim_hud_offset_rot               = 0.012137, 0.00246, -0.015
+        aim_hud_offset_rot_16x9          = 0.012137, 0.00246, -0.015
+		
 ;--------------------------------------------------------------------------------
 [wpn_m4_pdw_specter]:wpn_m4_pdw
-$spawn					= "weapons\ru556_specter"
-visual					= dynamics\weapons\wpn_kac_pdw\wpn_kac_world.ogf
+
 hud					= wpn_m4_pdw_specter_hud
 
 1icon_layer                              = specter
 1icon_layer_x                            = 55
 1icon_layer_y                            = -9
 
-inv_weight                                         = 3.620
+inv_weight                                         = 3.5
 scope_status                                       = 1
         scope_zoom_factor                = 30
-        scope_texture                    =
 zoom_rotate_time                                   = 0.25
 scope_dynamic_zoom                                 = on
 
@@ -643,9 +589,6 @@ item_visual				= dynamics\weapons\wpn_kac_pdw\wpn_kac_specter_hud.ogf
         aim_hud_offset_rot_16x9          = 0.006328, 0.002237, -0.015
 ;--------------------------------------------------------------------------------		
 [wpn_m4_pdw_leupold]:wpn_m4_pdw
-$spawn					= "weapons\ru556_leupold"
-
-visual					= dynamics\weapons\wpn_kac_pdw\wpn_kac_world.ogf
 
 hud					= wpn_m4_pdw_leupold_hud
 
@@ -653,10 +596,9 @@ hud					= wpn_m4_pdw_leupold_hud
 1icon_layer_x                            = 61
 1icon_layer_y                            = -5
 
-inv_weight                                         = 3.630
+inv_weight                                         = 3.5
 scope_status                                       = 1
         scope_zoom_factor                = 15
-		scope_texture                    =
 zoom_rotate_time                                   = 0.25
 scope_dynamic_zoom      = on
 
@@ -664,15 +606,12 @@ scope_dynamic_zoom      = on
 
 item_visual				= dynamics\weapons\wpn_kac_pdw\wpn_kac_leupold_hud.ogf
 
-        aim_hud_offset_pos               = -0.071916, 0.010559, -0.067359
-        aim_hud_offset_pos_16x9          = -0.071916, 0.010559, -0.067359
+        aim_hud_offset_pos               = -0.071721, 0.011297, -0.073964
+        aim_hud_offset_pos_16x9          = -0.071721, 0.011297, -0.073964
         aim_hud_offset_rot               = 0.007036, 0.002229, -0.015
         aim_hud_offset_rot_16x9          = 0.007036, 0.002229, -0.015
 ;-----------------------------------------------------------------------------------
 [wpn_m4_pdw_pn23]:wpn_m4_pdw
-$spawn					= "weapons\ru556_pn23"
-
-visual					= dynamics\weapons\wpn_kac_pdw\wpn_kac_world.ogf
 
 hud					= wpn_m4_pdw_pn23_hud
 
@@ -681,20 +620,19 @@ hud					= wpn_m4_pdw_pn23_hud
 1icon_layer_y                            = -13
 
 
-inv_weight                                         = 3.72
-scope_status                                       = 1
-        scope_zoom_factor                = 30
-        scope_texture                    =
-zoom_rotate_time                                   = 0.25
-scope_dynamic_zoom      = on
+inv_weight                       = 3.7
+scope_status                     = 1
+scope_zoom_factor                = 30
+zoom_rotate_time                 = 0.25
+scope_dynamic_zoom      		 = on
 
 [wpn_m4_pdw_pn23_hud]:wpn_m4_pdw_hud
 
 item_visual				= dynamics\weapons\wpn_kac_pdw\wpn_kac_pn23_hud.ogf
-        aim_hud_offset_pos               = -0.071841, 0.002436, -0.08416
-        aim_hud_offset_pos_16x9          = -0.071841, 0.002436, -0.08416
-        aim_hud_offset_rot               = 0.005829, 0.001856, -0.015
-        aim_hud_offset_rot_16x9          = 0.005829, 0.001856, -0.015
+        aim_hud_offset_pos               = -0.071627, 0.012072, -0.115023
+        aim_hud_offset_pos_16x9          = -0.071627, 0.012072, -0.115023
+        aim_hud_offset_rot               = 0.005901, 0.001973, -0.015
+        aim_hud_offset_rot_16x9          = 0.005901, 0.001973, -0.015
 
 ;------------------------------------------------------------------------------------
 [wpn_m4_pdw_marchf]:wpn_m4_pdw
@@ -702,42 +640,33 @@ item_visual				= dynamics\weapons\wpn_kac_pdw\wpn_kac_pn23_hud.ogf
 1icon_layer_x                            = 65
 1icon_layer_y                            = -4
 
-inv_weight                                         = 3.72
+inv_weight                               = 3.7
 
 hud                                      = wpn_m4_pdw_marchf_hud
-visual                                   = dynamics\weapons\wpn_kac_pdw\wpn_kac_world.ogf
-
-
 
 scope_status                             = 1
         scope_zoom_factor                = 5
 		min_scope_zoom_factor			 = 40
-        scope_texture                    =
 		scope_dynamic_zoom               = on
-
 
 [wpn_m4_pdw_marchf_hud]:wpn_m4_pdw_hud
 item_visual                              = dynamics\weapons\wpn_kac_pdw\wpn_kac_marchf_hud.ogf
-        aim_hud_offset_pos               = -0.07158, 0.014045, -0.076531
-        aim_hud_offset_pos_16x9          = -0.07158, 0.014045, -0.076531
-        aim_hud_offset_rot               = 0.006459, 0.002645, -0.015
-        aim_hud_offset_rot_16x9          = 0.006459, 0.002645, -0.015
+        aim_hud_offset_pos               = -0.07158, 0.014045, -0.080015
+        aim_hud_offset_pos_16x9          = -0.07158, 0.014045, -0.080015
+        aim_hud_offset_rot               = 0.006261, 0.002607, -0.015
+        aim_hud_offset_rot_16x9          = 0.006261, 0.002607, -0.015
 ;-----------------------------------------------------------------------------------------------------
 [wpn_m4_pdw_hamr]:wpn_m4_pdw
 1icon_layer                              = hamr
 1icon_layer_x                            = 59
 1icon_layer_y                            = -14
 
-inv_weight                                         = 3.32
+inv_weight                               = 3.4
 
 hud                                      = wpn_m4_pdw_hamr_hud
-visual                                   = dynamics\weapons\wpn_kac_pdw\wpn_kac_world.ogf
-
-
 
 scope_status                             = 1
         scope_zoom_factor                = 30
-        scope_texture                    =
 use_alt_aim_hud							 = true
 
 [wpn_m4_pdw_hamr_hud]:wpn_m4_pdw_hud
@@ -747,80 +676,72 @@ item_visual                              = dynamics\weapons\wpn_kac_pdw\wpn_kac_
         aim_hud_offset_alt_rot           = 7.1e-05, -0.000336, -0.006818
         aim_hud_offset_alt_rot_16x9      = 7.1e-05, -0.000336, -0.006818
 		
-        aim_hud_offset_pos               = -0.071702, 0.009907, -0.112363
-        aim_hud_offset_pos_16x9          = -0.071702, 0.009907, -0.112363
+        aim_hud_offset_pos               = -0.071702, 0.009907, -0.117689
+        aim_hud_offset_pos_16x9          = -0.071702, 0.009907, -0.117689
         aim_hud_offset_rot               = 0.00581, 0.001843, -0.015
         aim_hud_offset_rot_16x9          = 0.00581, 0.001843, -0.015
 ;-----------------------------------------------------------------------------------------------------
 [wpn_m4_pdw_ps320]:wpn_m4_pdw
-
-visual					= dynamics\weapons\wpn_kac_pdw\wpn_kac_world.ogf
-
 hud					= wpn_m4_pdw_ps320_hud
 
-1icon_layer                              = ps320
-1icon_layer_x                            = 63
-1icon_layer_y                            = -17
+1icon_layer             = ps320
+1icon_layer_x           = 63
+1icon_layer_y           = -17
 
-inv_weight                                         = 3.730
-scope_status                                       = 1
-        scope_zoom_factor                = 20
-		scope_texture                    =
-zoom_rotate_time                                   = 0.25
+inv_weight              = 3.7
+
+scope_status            = 1
+scope_zoom_factor       = 20
+zoom_rotate_time        = 0.25
 scope_dynamic_zoom      = on
 
 [wpn_m4_pdw_ps320_hud]:wpn_m4_pdw_hud
 
 item_visual				= dynamics\weapons\wpn_kac_pdw\wpn_kac_ps320_hud.ogf
 
-        aim_hud_offset_pos               = -0.071916, 0.010559, -0.067998
-        aim_hud_offset_pos_16x9          = -0.071916, 0.010559, -0.067998
-        aim_hud_offset_rot               = 0.007036, 0.002229, -0.015
-        aim_hud_offset_rot_16x9          = 0.007036, 0.002229, -0.015
+        aim_hud_offset_pos               = -0.072245, 0.012989, -0.101628
+        aim_hud_offset_pos_16x9          = -0.072245, 0.012989, -0.101628
+        aim_hud_offset_rot               = 0.006552, 0.002557, -0.015
+        aim_hud_offset_rot_16x9          = 0.006552, 0.002557, -0.015
 ;-----------------------------------------------------------------------------------
 [wpn_m4_pdw_trihawk]:wpn_m4_pdw
 1icon_layer                              = trihawk
 1icon_layer_x                            = 80
 1icon_layer_y                            = -17
 
-inv_weight                                         = 3.32
+inv_weight                               = 3.3
 
 hud                                      = wpn_m4_pdw_trihawk_hud
-visual                                   = dynamics\weapons\wpn_kac_pdw\wpn_kac_world.ogf
-
-
 
 scope_status                             = 1
         scope_zoom_factor                = 40
-        scope_texture                    =
 
 [wpn_m4_pdw_trihawk_hud]:wpn_m4_pdw_hud
 item_visual                              = dynamics\weapons\wpn_kac_pdw\wpn_kac_trihawk_hud.ogf
-
-        aim_hud_offset_pos               = -0.071821, 0.007487, -0.132157
-        aim_hud_offset_pos_16x9          = -0.071821, 0.007487, -0.132157
+        aim_hud_offset_pos               = -0.071744, 0.007704, -0.084498
+        aim_hud_offset_pos_16x9          = -0.071744, 0.007704, -0.084498
         aim_hud_offset_rot               = 0.006207, 0.002216, -0.015
         aim_hud_offset_rot_16x9          = 0.006207, 0.002216, -0.015
+		
 ;-----------------------------------------------------------------------------------------------------
 [wpn_m4_pdw_monstrum]:wpn_m4_pdw
 1icon_layer                              = monstrum
 1icon_layer_x                            = 80
 1icon_layer_y                            = -16
 
-inv_weight                                         = 3.32
+inv_weight                               = 3.3
 
 hud                                      = wpn_m4_pdw_monstrum_hud
-visual                                   = dynamics\weapons\wpn_kac_pdw\wpn_kac_world.ogf
-
-
 
 scope_status                             = 1
         scope_zoom_factor                = 60
-        scope_texture                    =
 
 [wpn_m4_pdw_monstrum_hud]:wpn_m4_pdw_hud
 item_visual                              = dynamics\weapons\wpn_kac_pdw\wpn_kac_monstrum_hud.ogf
-
+        aim_hud_offset_pos               = -0.07168, 0.021038, -0.116592
+        aim_hud_offset_pos_16x9          = -0.07168, 0.021038, -0.116592
+        aim_hud_offset_rot               = 0.005646, 0.001808, -0.015
+        aim_hud_offset_rot_16x9          = 0.005646, 0.001808, -0.015
 
 ;-----------------------------------------------------------------------------------------------------
 [wpn_m4_pdw_gee36]:wpn_m4_pdw
@@ -828,16 +749,13 @@ item_visual                              = dynamics\weapons\wpn_kac_pdw\wpn_kac_
 1icon_layer_x                            = 70
 1icon_layer_y                            = -7
 
-inv_weight                                         = 3.46
+inv_weight                                         = 3.5
 
 hud                                      = wpn_m4_pdw_gee36_hud
-visual                                   = dynamics\weapons\wpn_kac_pdw\wpn_kac_world.ogf
 
-
-
-scope_status                             = 1
+		scope_status                     = 1
         scope_zoom_factor                = 40
-        scope_texture                    =
+
 
 [wpn_m4_pdw_gee36_hud]:wpn_m4_pdw_hud
 item_visual                              = dynamics\weapons\wpn_kac_pdw\wpn_kac_gee36_hud.ogf
@@ -847,60 +765,73 @@ item_visual                              = dynamics\weapons\wpn_kac_pdw\wpn_kac_
         aim_hud_offset_alt_rot           = 0.002373, 0.006338, 0
         aim_hud_offset_alt_rot_16x9      = 0.002373, 0.006338, 0
 		
-        aim_hud_offset_pos               = -0.071633, 0.009958, -0.119406
-        aim_hud_offset_pos_16x9          = -0.071633, 0.009958, -0.119406
-        aim_hud_offset_rot               = 0.006153, 0.002304, -0.015
-        aim_hud_offset_rot_16x9          = 0.006153, 0.002304, -0.015
+        aim_hud_offset_pos               = -0.07158, 0.01012, -0.12744
+        aim_hud_offset_pos_16x9          = -0.07158, 0.01012, -0.12744
+        aim_hud_offset_rot               = 0.006171, 0.002212, -0.015
+        aim_hud_offset_rot_16x9          = 0.006171, 0.002212, -0.015
+;-----------------------------------------------------------------------------------------------------
+[wpn_m4_pdw_t12]:wpn_m4_pdw
+1icon_layer                              = t12
+1icon_layer_x                            = 70
+1icon_layer_y                            = -7
+
+inv_weight                               = 3.1
+
+hud                                      = wpn_m4_pdw_t12_hud
+
+	s3ds_reticle_size 	= 1.8
+
+[wpn_m4_pdw_t12_hud]:wpn_m4_pdw_hud
+item_visual                              = dynamics\weapons\wpn_kac_pdw\wpn_kac_t12_hud.ogf
+
+        aim_hud_offset_pos               = -0.071368, 0.015922, -0.056917
+        aim_hud_offset_pos_16x9          = -0.071368, 0.015922, -0.056917
+        aim_hud_offset_rot               = 0.008354, 0.001823, -0.015
+        aim_hud_offset_rot_16x9          = 0.008354, 0.001823, -0.015		
 ;-----------------------------------------------------------------------------------------------------
 [wpn_m4_pdw_sup]:wpn_m4_pdw
+parent_section 	   = wpn_m4_pdw_sup
+description        = st_wpn_m4_pdw_up_descr
+hud                = wpn_m4_pdw_sup_hud
 
-description             = st_wpn_m4_pdw_up_descr
-parent_section = wpn_m4_pdw_sup
-scopes = 
+scopes 			   = 
 
 inv_grid_x         = 4
 inv_grid_y         = 0
 
-ammo_elapsed            = 50
-ammo_mag_size           = 50
+ammo_elapsed       = 50
+ammo_mag_size      = 50
 
-inv_weight                               = 4.1
+inv_weight         = 4.1
 
-visual 									 = dynamics\weapons\wpn_kac_pdw\wpn_kac_sup_world.ogf
-
-hud                                      = wpn_m4_pdw_sup_hud
-
-
-scope_status                                       = 1
-        scope_zoom_factor                = 15
-        scope_texture                    =
-		scope_dynamic_zoom               = on
-zoom_rotate_time                                   = 0.25
-scope_dynamic_zoom                                 = on
+scope_status                    = 1
+scope_zoom_factor               = 15
+scope_dynamic_zoom              = on
+zoom_rotate_time                = 0.25
 
 use_alt_aim_hud					= true
 laser_status					= true
 
-	3ds_reticle_size = 9
-	3ds_shadow_project = 3.9
-	3ds_ffp_min_zoom = 32	
-	magnification = 8
+	s3ds_reticle_size 	= 4.1
+	s3ds_eye_relief 	= 2.3
+	s3ds_chroma_power	= 0		
+	magnification 		= 8
 	
 [wpn_m4_pdw_sup_hud]:wpn_m4_pdw_hud
-item_visual                              = dynamics\weapons\wpn_kac_pdw\wpn_kac_sup_hud.ogf
+item_visual              = dynamics\weapons\wpn_kac_pdw\wpn_kac_sup_hud.ogf
 
-anm_reload              		= mka_sh_quick_reload_drum, quick_reload_drum, 1.1
-anm_reload_empty             	= mka_sh_empty_reload_drum, empty_reload_drum
+anm_reload               = mka_sh_quick_reload_drum, quick_reload_drum, 1.1
+anm_reload_empty         = mka_sh_empty_reload_drum, empty_reload_drum
 
-        aim_hud_offset_alt_pos           = -0.095398, -0.056944, -0.122986
-        aim_hud_offset_alt_pos_16x9      = -0.095398, -0.056944, -0.122986
+        aim_hud_offset_alt_pos           = -0.095398, -0.056944, -0.077408
+        aim_hud_offset_alt_pos_16x9      = -0.095398, -0.056944, -0.077408
         aim_hud_offset_alt_rot           = 0.00937, 0.014861, 0.75
         aim_hud_offset_alt_rot_16x9      = 0.00937, 0.014861, 0.75
 
-        aim_hud_offset_pos               = -0.071677, 0.012427, -0.081328
-        aim_hud_offset_pos_16x9          = -0.071677, 0.012427, -0.081328
-        aim_hud_offset_rot               = 0.014616, 0.008076, -0.015
-        aim_hud_offset_rot_16x9          = 0.014616, 0.008076, -0.015
+        aim_hud_offset_pos               = -0.071652, 0.01232, -0.068669
+        aim_hud_offset_pos_16x9          = -0.071652, 0.01232, -0.068669
+        aim_hud_offset_rot               = 0.014417, 0.007905, -0.015
+        aim_hud_offset_rot_16x9          = 0.014417, 0.007905, -0.015
 		
         hands_orientation                = 0.0036, -0.538663, 3.45
         hands_orientation_16x9           = 0.0036, -0.538663, 3.45	
