--- a/KAC Freak PDW/gamedata/configs/items/weapons/w_kac_isg.ltx
+++ b/KAC Freak PDW/gamedata/configs/items/weapons/w_kac_isg.ltx
@@ -559,7 +559,7 @@ item_visual            	 	= dynamics\weapons\wpn_kac_pdw\wpn_kac_acog_hud.ogf
 		
 ;--------------------------------------------------------------------------------
 [wpn_m4_pdw_specter]:wpn_m4_pdw
-
+zoom_step_count=1
 hud					= wpn_m4_pdw_specter_hud
 
 1icon_layer                              = specter
@@ -606,10 +606,10 @@ scope_dynamic_zoom      = on
 
 item_visual				= dynamics\weapons\wpn_kac_pdw\wpn_kac_leupold_hud.ogf
 
-        aim_hud_offset_pos               = -0.071721, 0.011297, -0.073964
-        aim_hud_offset_pos_16x9          = -0.071721, 0.011297, -0.073964
-        aim_hud_offset_rot               = 0.007036, 0.002229, -0.015
-        aim_hud_offset_rot_16x9          = 0.007036, 0.002229, -0.015
+        aim_hud_offset_pos               = -0.071721, 0.011297, -0.072827
+        aim_hud_offset_pos_16x9          = -0.071721, 0.011297, -0.072827
+        aim_hud_offset_rot               = 0.006308, 0.002086, -0.015
+        aim_hud_offset_rot_16x9          = 0.006308, 0.002086, -0.015
 ;-----------------------------------------------------------------------------------
 [wpn_m4_pdw_pn23]:wpn_m4_pdw
 
@@ -622,7 +622,7 @@ hud					= wpn_m4_pdw_pn23_hud
 
 inv_weight                       = 3.7
 scope_status                     = 1
-scope_zoom_factor                = 30
+scope_zoom_factor                = 20
 zoom_rotate_time                 = 0.25
 scope_dynamic_zoom      		 = on
 
@@ -683,10 +683,11 @@ item_visual                              = dynamics\weapons\wpn_kac_pdw\wpn_kac_
 ;-----------------------------------------------------------------------------------------------------
 [wpn_m4_pdw_ps320]:wpn_m4_pdw
 hud					= wpn_m4_pdw_ps320_hud
+zoom_step_count=1
 
 1icon_layer             = ps320
-1icon_layer_x           = 63
-1icon_layer_y           = -17
+1icon_layer_x           = 59
+1icon_layer_y           = -12
 
 inv_weight              = 3.7
 
@@ -699,10 +700,10 @@ scope_dynamic_zoom      = on
 
 item_visual				= dynamics\weapons\wpn_kac_pdw\wpn_kac_ps320_hud.ogf
 
-        aim_hud_offset_pos               = -0.072245, 0.012989, -0.101628
-        aim_hud_offset_pos_16x9          = -0.072245, 0.012989, -0.101628
-        aim_hud_offset_rot               = 0.006552, 0.002557, -0.015
-        aim_hud_offset_rot_16x9          = 0.006552, 0.002557, -0.015
+        aim_hud_offset_pos               = -0.07218, 0.013169, -0.101628
+        aim_hud_offset_pos_16x9          = -0.07218, 0.013169, -0.101628
+        aim_hud_offset_rot               = 0.00612, 0.002046, -0.015
+        aim_hud_offset_rot_16x9          = 0.00612, 0.002046, -0.015
 ;-----------------------------------------------------------------------------------
 [wpn_m4_pdw_trihawk]:wpn_m4_pdw
 1icon_layer                              = trihawk
@@ -830,8 +831,8 @@ anm_reload_empty         = mka_sh_empty_reload_drum, empty_reload_drum
 
         aim_hud_offset_pos               = -0.071652, 0.01232, -0.068669
         aim_hud_offset_pos_16x9          = -0.071652, 0.01232, -0.068669
-        aim_hud_offset_rot               = 0.014417, 0.007905, -0.015
-        aim_hud_offset_rot_16x9          = 0.014417, 0.007905, -0.015
+        aim_hud_offset_rot               = 0.014111, 0.00784, -0.015
+        aim_hud_offset_rot_16x9          = 0.014111, 0.00784, -0.015
 		
         hands_orientation                = 0.0036, -0.538663, 3.45
         hands_orientation_16x9           = 0.0036, -0.538663, 3.45	
