--- a/KAC Freak PDW/gamedata/configs/items/settings/npc_loadouts/mod_npc_loadouts_pdw.ltx
+++ b/KAC Freak PDW/gamedata/configs/items/settings/npc_loadouts/mod_npc_loadouts_pdw.ltx
@@ -1,31 +1,26 @@
-![army_veteran_primary]
-wpn_m4_pdw:4:0
-
-![army_master_primary]
-wpn_m4_pdw:4:3
-
 ![freedom_veteran_primary]
-wpn_m4_pdw:r:3
+wpn_m4_pdw:r:3:25:25
 
 ![freedom_master_primary]
-wpn_m4_pdw:r:0
+wpn_m4_pdw:r:3:15:80
 
 ![killer_veteran_primary]
-wpn_m4_pdw:4:0
+wpn_m4_pdw:r:3:25:25
 
 ![killer_master_primary]
-wpn_m4_pdw_sup:4:0
-wpn_m4_pdw:4:0
+wpn_m4_pdw_sup:r:3:5:100
+wpn_m4_pdw:r:3:15:80
 
 ![isg_veteran_primary]
-wpn_m4_pdw:r:3
+wpn_m4_pdw:r:3:25:60
 
 ![isg_master_primary]
-wpn_m4_pdw:r:0
+wpn_m4_pdw:r:3:15:80
+wpn_m4_pdw_sup:r:3:5:100
 
 ![monolith_veteran_primary]
-wpn_m4_pdw:4:0
+wpn_m4_pdw:r:3:25:60
 
 ![monolith_master_primary]
-wpn_m4_pdw:r:3
-wpn_m4_pdw_sup:4:0
+wpn_m4_pdw:r:3:15:80
+wpn_m4_pdw_sup:r:3:5:100
